[project]
name = "nice-gui-playground"
version = "0.0.0"
description = ""
authors = [
    {name = "Luuk Verweij",email = "luuk_verweij@msn.com"},
]
dependencies = [
    "nicegui==1.3.17",
    "click==8.1.3",
    "requests>=2.31.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "mypy>=0.991",
    "pdbpp>=0.10.3",
    "pre-commit>=3.0.1",
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
    "types-click>=7.1.8",
    "types-requests>=2.31.0.9",
]
